--- a/src/index.css
+++ b/src/index.css
@@ -75,19 +75,19 @@ body {
 }
 
 /* Force table wrapper to use available height */
-/* .table-wrapper { 
+.table-wrapper { 
   flex: 1;
-  overflow: auto; /* vertical AND horizontal together 
+  overflow: auto; /* vertical AND horizontal together */
   padding-bottom: 4px;
-} */
+} 
 
-.table-wrapper {
+/* .table-wrapper {
   flex: 1;
   overflow: auto;
   background: #f9fafb;
   border-radius: 8px;
   border: 1px solid #e3e5e8;
-}
+} */
 
 
 /* Allow table to expand horizontally without squishing */
@@ -97,11 +97,11 @@ body {
   border-collapse: collapse;
 }
 
-.rec-table th,
+/* .rec-table th,
 .rec-table td {
   padding: 8px 14px;
-  white-space: nowrap; /* prevents ugly wrapping */
-}
+  white-space: nowrap; /* prevents ugly wrapping 
+} */
 
 
 /* ---- Filters row ---- */
